--- a/app/views/brewhouses/index.html.erb
+++ b/app/views/brewhouses/index.html.erb
@@ -17,7 +17,7 @@
     <td><%= brewhouse.activebeers %></td>
     <td><%= link_to 'Show', brewhouse %></td>
     <td><%= link_to 'Edit', edit_brewhouse_path(brewhouse) %></td>
-    <td><%= link_to 'Destroy', brewhouse, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', brewhouse, method: :destroy, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
