--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,15 @@
 <%= link_to "Home", "#", :class => 'brand' %>
 <ul class="nav">
     <li>
-    <%= link_to('Logout', "#", :method=>'delete') %>        
+    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
     </li>
     <li>
-    <%= link_to('Login', "#")  %>  
+    <%= link_to 'Login', new_user_session_path  %>  
     </li>
     <li>
-    <%= link_to('Edit account', "#") %>
+    <%= link_to 'Edit account', edit_user_registration_path %>
     </li>
     <li>
-    <%= link_to('Sign up', "#")  %>
+    <%= link_to 'Sign up', new_user_registration_path  %>
     </li>
 </ul>
