--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,21 @@
 <%= link_to "Home", "#", :class => 'brand' %>
 <ul class="nav">
-    <li>
-    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
-    </li>
-    <li>
-    <%= link_to 'Login', new_user_session_path  %>  
-    </li>
-    <li>
-    <%= link_to 'Edit account', edit_user_registration_path %>
-    </li>
-    <li>
-    <%= link_to 'Sign up', new_user_registration_path  %>
-    </li>
+    <% if user_signed_in? %>
+        <li>
+            <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
+        </li>
+        <li>
+            <%= link_to 'Edit account', edit_user_registration_path %>
+        </li>
+        <li>
+            <%= link_to 'My Brews', brews_path  %>
+        </li>
+    <% else %>
+        <li>
+            <%= link_to 'Login', new_user_session_path  %>  
+        </li>
+        <li>
+            <%= link_to 'Sign up', new_user_registration_path  %>
+        </li>
+    <% end %>   
 </ul>
