--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,21 +1,13 @@
-<%= link_to "Home", "#", :class => 'brand' %>
+<%= link_to "BrewHub", root_path, :class => 'brand' %>
 <ul class="nav">
     <% if user_signed_in? %>
-        <li>
+            <li>
             <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
-        </li>
-        <li>
-            <%= link_to 'Edit account', edit_user_registration_path %>
-        </li>
-        <li>
-            <%= link_to 'My Brews', brews_path  %>
-        </li>
+            </li>
+            <%= active_link 'Edit account', edit_user_registration_path %>
+            <%= active_link 'My Brews', gallery_brews_path  %>
     <% else %>
-        <li>
-            <%= link_to 'Login', new_user_session_path  %>  
-        </li>
-        <li>
-            <%= link_to 'Sign up', new_user_registration_path  %>
-        </li>
+            <%= active_link 'Login', new_user_session_path  %>  
+            <%= active_link 'Sign up', new_user_registration_path  %>
     <% end %>   
 </ul>
