--- a/app/views/brews/gallery.html.erb
+++ b/app/views/brews/gallery.html.erb
@@ -1,17 +1,13 @@
 <h1>Listing Your Brews</h1>
 
-<table>
+
+<table class="table table-striped table-condensed" name="brews">
   <tr>
     <th>Name</th>
     <th>Style</th>
     <th>Mash type</th>
-    <th>Grains</th>
-    <th>Hops</th>
-    <th>Extras</th>
-    <th>Instructions</th>
-    <th>Submitted by</th>
     <th>Created by</th>
-    <th>Submitted at</th>
+    <th>Submitted on</th>
     <th></th>
     <th></th>
     <th></th>
@@ -22,20 +18,15 @@
     <td><%= brew.name %></td>
     <td><%= brew.style %></td>
     <td><%= brew.mash_type %></td>
-    <td><%= brew.grains %></td>
-    <td><%= brew.hops %></td>
-    <td><%= brew.extras %></td>
-    <td><%= brew.instructions %></td>
-    <td><%= brew.submitted_by %></td>
     <td><%= brew.created_by %></td>
-    <td><%= brew.submitted_at %></td>
-    <td><%= link_to 'Show', brew %></td>
-    <td><%= link_to 'Edit', edit_brew_path(brew) %></td>
-    <td><%= link_to 'Destroy', brew, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= brew.submitted_at.strftime("%B %d, %Y") %></td>
+    <td><%= button_to 'Show', brew, method: :get, class: "btn" %></td>
+    <td><%= button_to 'Edit', edit_brew_path(brew), method: :get, class: "btn" %></td>
+    <td><%= button_to 'Destroy', brew, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Brew', new_brew_path %>
+<%= button_to 'New Brew', new_brew_path, class: "btn btn-primary" %>
