--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
 <h1>Listing users</h1>
 
-<table>
+<table class="table table-striped table-condensed">
   <tr>
     <th>Name</th>
     <th>Email</th>
-    <th>Password</th>
     <th></th>
     <th></th>
     <th></th>
@@ -14,14 +13,13 @@
   <tr>
     <td><%= user.name %></td>
     <td><%= user.email %></td>
-    <td><%= user.password %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= button_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= button_to 'Show', user, method: :get, class: "btn" %></td>
+    <td><%= button_to 'Edit', edit_user_path(user), method: :get, class: "btn" %></td>
+    <td><%= button_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, class: "btn btn-primary" %>
